--- a/lib-hybrid/src/main/AndroidManifest.xml
+++ b/lib-hybrid/src/main/AndroidManifest.xml
@@ -2,4 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kfang.base.hybrid">
 
+    <application>
+        <!-- React-Native 设置界面 -->
+        <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+    </application>
 </manifest>
