--- a/lib-hybrid/build.gradle
+++ b/lib-hybrid/build.gradle
@@ -33,7 +33,15 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     api 'com.facebook.react:react-native:0.69.7'
-    api 'org.webkit:android-jsc:+'
+
+    if (isEnableHermes()) {
+        //noinspection GradleDynamicVersion
+        api("com.facebook.react:hermes-engine:0.69.7") { // From node_modules
+            exclude group:'com.facebook.fbjni'
+        }
+    } else {
+        api 'org.webkit:android-jsc:+'
+    }
     // RN调试工具（只在debug下依赖）
     def FLIPPER_VERSION= "0.125.0"
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
@@ -46,4 +54,16 @@ dependencies {
     debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.flipper'
     }
+}
+
+def isEnableHermes() {
+    def enableHermes = false
+    rootProject.subprojects.forEach { project ->
+        if (project.plugins.hasPlugin("com.android.application")) {
+            if(project.ext.react.enableHermes) {
+                enableHermes = true
+            }
+        }
+    }
+    return enableHermes
 }
